# cpp-notes

./: CMakeLists.txt  Effective_cpp_98.md  abort()-and-exit().md  abstract-classes-without-pure-virtual-methods.md  argument-dependent-lookup.md  assert_static_assert.md  base-class-specific,-inherited-static-member.md  be_wary_of_auto_and_proxy_types.md  braced-vs-parenthesized-initialization.md  common_tasks.cpp  my_range_based_for_loop.md  name-hidding.md  operator_new_delete.md  range_based_for_loop.md  reference-qualifiers.md  sizeof.md  string.md  template-template-parameters.md
casting/: casting.md  casting_usage.cpp  dynamic_cast.md
class_design/: abstract-classes-without-pure-virtual-methods.md  abstract_classes_vtable.md  base_class_static_per_derived_class.md  class_const_ref_mem_mtx.cpp  class_design.cpp  class_design_pImpl.cpp  class_design_rule5.cpp  class_inheritence_virtual_base_crtp.cpp  declare-overriding-functions-override.md  explicit-constructors.md  explicit_use.cpp  inheritance-and-variables.md  making-classes-uncopyable.md  my_container_class.cpp  order_of_construction_destruction_with_vtable.md  prefer-deleted-functions-to-private-undefined-ones.md  preventing-exceptions-in-destructors.md  reference_qualifiers.md  scoped_enums_unscoped_enums.md  special-member-function-generation.md  super-in-c++.md  virtual-inheritance.md  virtual_function_call_from_constructor_destructor.md
constexpr/: constexpr.md  use-constexpr-whenever-possible.md
data_type_initialize/: default-and-value-initialization.md
exceptions/: cpp_exception_classes.md  (+3 more)
(+96 files in other folders)
